// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots organisms/SmallMaterial default 1`] = `
<div
  className="makeStyles-clickable-826 makeStyles-root-821"
  onClick={[Function]}
>
  <div
    className="makeStyles-imageColumn-822"
  >
    <span
      className="makeStyles-root-827 makeStyles-root-828 "
    >
      一番
    </span>
    <div
      className="gatsby-image-wrapper gatsby-image-wrapper-constrained makeStyles-karutaImage-824"
      data-gatsby-image-wrapper=""
      style={
        Object {
          "backgroundColor": undefined,
          "display": "inline-block",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "display": "block",
            "maxWidth": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden="true"
          role="presentation"
          src="data:image/svg+xml;charset=utf-8,%3Csvg height='undefined' width='undefined' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
          style={
            Object {
              "display": "block",
              "maxWidth": "100%",
              "position": "static",
            }
          }
        />
      </div>
      <div
        aria-hidden={true}
        data-placeholder-image=""
        style={
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      />
      <img
        alt="一番"
        data-gatsby-image-ssr=""
        data-main-image=""
        data-src="test-file-stub"
        decoding="async"
        loading="lazy"
        onLoad={[Function]}
        sizes="(max-width: 200px) 100vw, 200px"
        style={
          Object {
            "backgroundColor": undefined,
            "height": "100%",
            "left": 0,
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transform": "translateZ(0)",
            "transition": "opacity 250ms linear",
            "width": "100%",
            "willChange": "opacity",
          }
        }
      />
      <noscript>
        <img
          alt="一番"
          data-gatsby-image-ssr=""
          data-main-image=""
          decoding="async"
          loading="lazy"
          onLoad={[Function]}
          sizes="(max-width: 200px) 100vw, 200px"
          src="test-file-stub"
          style={
            Object {
              "backgroundColor": undefined,
              "height": "100%",
              "left": 0,
              "objectFit": undefined,
              "objectPosition": undefined,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transform": "translateZ(0)",
              "transition": "opacity 250ms linear",
              "width": "100%",
              "willChange": "opacity",
            }
          }
        />
      </noscript>
      <script
        dangerouslySetInnerHTML={
          Object {
            "__html": "const t=\\"undefined\\"!=typeof HTMLImageElement&&\\"loading\\"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll(\\"img[data-main-image]\\");for(let e of t)e.dataset.src&&(e.setAttribute(\\"src\\",e.dataset.src),e.removeAttribute(\\"data-src\\")),e.dataset.srcset&&(e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\")),e.complete&&(e.style.opacity=1)}",
          }
        }
        type="module"
      />
    </div>
  </div>
  <div
    className="makeStyles-textColumn-823"
  >
    <p
      className="makeStyles-root-827 makeStyles-root-830 makeStyles-root-829"
    >
      秋の田の かりほの庵の 苫をあらみ
      <br />
      わが衣手は 露にぬれつつ
    </p>
    <span
      className="makeStyles-root-827 makeStyles-root-831 makeStyles-creator-825"
    >
      天智天皇
    </span>
  </div>
</div>
`;

exports[`Storyshots organisms/SmallMaterial no image 1`] = `
<div
  className="makeStyles-clickable-848 makeStyles-root-843"
  onClick={[Function]}
>
  <div
    className="makeStyles-textColumn-845"
  >
    <span
      className="makeStyles-root-849 makeStyles-root-850 "
    >
      一番
    </span>
    <p
      className="makeStyles-root-849 makeStyles-root-852 makeStyles-root-851"
    >
      秋の田の かりほの庵の 苫をあらみ
      <br />
      わが衣手は 露にぬれつつ
    </p>
    <span
      className="makeStyles-root-849 makeStyles-root-853 makeStyles-creator-847"
    >
      天智天皇
    </span>
  </div>
</div>
`;

exports[`Storyshots organisms/SmallMaterial separate space 1`] = `
<div
  className="makeStyles-clickable-837 makeStyles-root-832"
  onClick={[Function]}
>
  <div
    className="makeStyles-imageColumn-833"
  >
    <span
      className="makeStyles-root-838 makeStyles-root-839 "
    >
      一番
    </span>
    <div
      className="gatsby-image-wrapper gatsby-image-wrapper-constrained makeStyles-karutaImage-835"
      data-gatsby-image-wrapper=""
      style={
        Object {
          "backgroundColor": undefined,
          "display": "inline-block",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "display": "block",
            "maxWidth": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden="true"
          role="presentation"
          src="data:image/svg+xml;charset=utf-8,%3Csvg height='undefined' width='undefined' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
          style={
            Object {
              "display": "block",
              "maxWidth": "100%",
              "position": "static",
            }
          }
        />
      </div>
      <div
        aria-hidden={true}
        data-placeholder-image=""
        style={
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      />
      <img
        alt="一番"
        data-gatsby-image-ssr=""
        data-main-image=""
        data-src="test-file-stub"
        decoding="async"
        loading="lazy"
        onLoad={[Function]}
        sizes="(max-width: 200px) 100vw, 200px"
        style={
          Object {
            "backgroundColor": undefined,
            "height": "100%",
            "left": 0,
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transform": "translateZ(0)",
            "transition": "opacity 250ms linear",
            "width": "100%",
            "willChange": "opacity",
          }
        }
      />
      <noscript>
        <img
          alt="一番"
          data-gatsby-image-ssr=""
          data-main-image=""
          decoding="async"
          loading="lazy"
          onLoad={[Function]}
          sizes="(max-width: 200px) 100vw, 200px"
          src="test-file-stub"
          style={
            Object {
              "backgroundColor": undefined,
              "height": "100%",
              "left": 0,
              "objectFit": undefined,
              "objectPosition": undefined,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transform": "translateZ(0)",
              "transition": "opacity 250ms linear",
              "width": "100%",
              "willChange": "opacity",
            }
          }
        />
      </noscript>
      <script
        dangerouslySetInnerHTML={
          Object {
            "__html": "const t=\\"undefined\\"!=typeof HTMLImageElement&&\\"loading\\"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll(\\"img[data-main-image]\\");for(let e of t)e.dataset.src&&(e.setAttribute(\\"src\\",e.dataset.src),e.removeAttribute(\\"data-src\\")),e.dataset.srcset&&(e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\")),e.complete&&(e.style.opacity=1)}",
          }
        }
        type="module"
      />
    </div>
  </div>
  <div
    className="makeStyles-textColumn-834"
  >
    <p
      className="makeStyles-root-838 makeStyles-root-841 makeStyles-root-840"
    >
      秋の田の かりほの庵の 苫をあらみ
       
      わが衣手は 露にぬれつつ
    </p>
    <span
      className="makeStyles-root-838 makeStyles-root-842 makeStyles-creator-836"
    >
      天智天皇
    </span>
  </div>
</div>
`;
